<resources>
    <string name="app_name">CoffeeMaker</string>
    <string name="dark_roasted_beans">Dark Roasted Beans</string>
    <string name="tab_the_machine_to_start">Tab the machine to start</string>
    <string name="how_does_this_work"><u>How does this work</u></string>
    <string name="brew_with_lex">Brew With Lex</string>
    <string name="select_your_style">Select your style</string>
    <string name="select_your_size">Select your size</string>
    <string name="select_your_extra_s">Select your extra’s</string>
    <string name="overview_your_selection">Overview Your Selection</string>
    <string name="brew_your_coffee">Brew your coffee</string>
    <string name="overview">Overview</string>
    <string name="edit">Edit</string>
    <string name="ops">Ops!</string>
    <string name="thanks">Thanks</string>
    <string name="problem_with_coffee_maker">Something went wrong with Coffee Maker</string>
    <string name="congratulation">Congratulation</string>
    <string name="finish_text">Your coffee smells so much delicious! Come back again</string>
</resources>