<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/header_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@+id/extraRecyclerView"
        app:layout_constraintTop_toTopOf="parent">
        <LinearLayout
            android:id="@+id/backLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingTop="10dp"
            android:paddingEnd="0dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_back"/>

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:letterSpacing="0.02"
                android:textAlignment="center"
                android:text="@string/brew_with_lex"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/selectionTitleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:letterSpacing="0.02"
            android:paddingStart="10dp"
            android:paddingEnd="0dp"
            android:text="@string/select_your_extra_s"
            android:textColor="@color/black"
            android:textSize="24sp" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/extraRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/overviewButton"
        app:layout_constraintTop_toBottomOf="@+id/header_title"
        tools:listitem="@layout/selection_item" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/overviewButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20sp"
        android:padding="30dp"
        android:textStyle="bold"
        android:textAlignment="textStart"
        android:backgroundTint="@color/green"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/overview_your_selection"/>


</androidx.constraintlayout.widget.ConstraintLayout>