<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:id="@+id/header_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@+id/selectionCardView"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/backLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="10dp"
            android:paddingTop="10dp"
            android:paddingEnd="0dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_back" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:letterSpacing="0.02"
                android:text="@string/brew_with_lex"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/selectionTitleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:letterSpacing="0.02"
            android:paddingStart="10dp"
            android:paddingEnd="0dp"
            android:text="@string/overview"
            android:textColor="@color/black"
            android:textSize="24sp" />

    </LinearLayout>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/selectionCardView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="20dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        app:cardCornerRadius="10dp"
        app:cardBackgroundColor="@color/green"
        app:layout_constraintBottom_toTopOf="@+id/brewCoffeeButton"
        app:layout_constraintTop_toBottomOf="@+id/header_title">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <include
                android:id="@+id/typeSelection"
                layout="@layout/selection_item" />

            <include
                android:id="@+id/sizeSelection"
                layout="@layout/selection_item" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/overviewRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:listitem="@layout/selection_item" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/brewCoffeeButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20sp"
        android:backgroundTint="@color/green"
        android:padding="30dp"
        android:text="@string/brew_your_coffee"
        android:textAlignment="textStart"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>